【优化】lua54